# ChangeLog for net-im/psi-attention
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Mar 2010; <slep@gentoo.org> psi-attention-9999.ebuild:
  QA repoman fix

  07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  create ChangeLog
