@@ -1,3 +1,5 @@
+DIST psi-attention-0.1.2_pre3076.tar.xz 6316 RMD160 6e0ccdb45f156e5a85ccdc7713fbb1b19b409ee5 SHA1 c8502e8b58c1bd5d4fd941c304f5f7b9a0e08ab8 SHA256 4fa03168ac6989c146699b724c86a3589e88d5bb7f55552134a9723b72f79044
+EBUILD psi-attention-0.1.2_pre3076.ebuild 242 RMD160 29be09d8b8dccac216910041f30bff6df3abe448 SHA1 8f70fed708db3571209777176e0679ebc603ae57 SHA256 09a5eed64de3994a6041c4a927e2a72ac390f01d6d74cc1974e4536368cc8deb
 EBUILD psi-attention-9999.ebuild 233 RMD160 a094626ab7984268291cd200780c891db3b883da SHA1 9c591f21ea29421d1e3c80729185b6799fee36fa SHA256 6093c61f76e7002c1585c8a81d6e96ae55c0f135348e042aa7b6b845733f11af
-MISC ChangeLog 283 RMD160 20b3c3847ecf161ff63a642cf9b94ee3a406f1cf SHA1 0fe22001eb9272f2c721c2c9f8e8ca304f4c91bf SHA256 ce4d5b3ff974a8d47c18d13b174b5074f6b59045dde3db112c6ff69a08a8943c
+MISC ChangeLog 381 RMD160 917377351ea3b91a5ba0261995c1de865e0a2ee8 SHA1 d0bb82b3fde18efbd457883a40a446d7ee09f264 SHA256 90841748f1e000d89d429ac3240f96b40e8fe69b224a4138baefff74a5651387
 MISC metadata.xml 346 RMD160 c60f28aedcf937f057b0cdea66cb225b4336b82d SHA1 15db78eb66bcb0d58d16ab0b99cb7d5c9e372e25 SHA256 05958df47be1b81397aae2ae6d454ee89b276b0b1f9af0472bea6cdc08b55b55
